@@ -4,9 +4,9 @@
 
 pkgbase="openoffice-base-devel"
 pkgname=('openoffice-base-devel' 'openoffice-sdk-devel')
-_OO_milestone=DEV300_m75
+_OO_milestone=DEV300_m76
 pkgver=3.3_${_OO_milestone/DEV/dev}
-pkgrel=2
+pkgrel=1
 arch=('i686' 'x86_64')
 license=('LGPL3')
 url="http://www.openoffice.org"
@@ -17,9 +17,8 @@ makedepends=(# the real makedeps
 	     # from main OOo the deps
 	     "curl>=7.19.7" "hunspell>=1.2.8" "python>=2.6.4" 'libwpd' 'libxaw' "neon>=0.28.6"
              'dbus-glib' "icu>=4.2.1" 'hsqldb-java' 'libxslt' 'hicolor-icon-theme' 'desktop-file-utils'
-	     'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'boost>=1.41.0' 'lucene') #'redland>=1.0.10-2'
-	     # libmythes
-source=(${pkgname}-${_OO_milestone}.tar.gz
+	     'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'boost>=1.41.0' 'lucene') #'redland>=1.0.10-2' 'libmythes'
+source=(${pkgname}-${_OO_milestone}.tar.xz
 	http://tools.openoffice.org/unowinreg_prebuild/680/unowinreg.dll
 	startcenter.desktop
 	default-no-startup-wizard.diff
@@ -37,8 +36,8 @@ options=('!distcc' '!ccache' '!makeflags')
 mksource() {
         mkdir /tmp/$pkgname-source
         pushd /tmp/$pkgname-source
-	hg -v clone -r ${_OO_milestone} http://hg.services.openoffice.org/hg/DEV300 ${_OO_milestone}
-	tar -cvzf ${pkgname}-${_OO_milestone}.tar.gz ${_OO_milestone}/*
+	hg -v --time clone -r ${_OO_milestone} http://hg.services.openoffice.org/hg/DEV300 ${_OO_milestone}
+	tar -cvJf ${pkgname}-${_OO_milestone}.tar.xz ${_OO_milestone}/*
         popd
 }
 
@@ -181,9 +180,9 @@ package_openoffice-base-devel() {
 
  pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite - developement branch"
  install=openoffice.install
- depends=("curl>=7.19.2" "hunspell>=1.2.8" "python>=2.6.2" 'libwpd' 'redland>=1.0.10-2' 'libxaw' "neon>=0.28.4"
+ depends=("curl>=7.19.2" "hunspell>=1.2.8" "python>=2.6.2" 'libwpd' 'libxaw' "neon>=0.28.4"
           'dbus-glib' "icu>=4.2.1" 'hsqldb-java' 'libxslt' 'hicolor-icon-theme' 'desktop-file-utils' 'gtk2'
-	  'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'lucene') # 'libmythes'
+	  'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'lucene') # 'redland>=1.0.10-2' 'libmythes'
  optdepends=('java-runtime:	adds java support'
             'libcups:		adds printing support'
             'gconf:		adds additional gnome support'
@@ -231,9 +230,9 @@ package_openoffice-base-devel() {
        
        # install extensions
        pushd ${srcdir}/${_OO_milestone}/solver/300/unxlng?6.pro/bin
-         install -D -m644 sun-report-builder.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/sun-report-builder.oxt || return 1
+         install -D -m644 oracle-report-builder.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/oracle-report-builder.oxt || return 1
 	 install -D -m644 swext/wiki-publisher.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/wiki-publisher.oxt || return 1
-	 install -D -m644 minimizer/sun-presentation-minimizer.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/sun-presentation-minimizer.oxt || return 1
+	 install -D -m644 minimizer/presentation-minimizer.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presentation-minimizer.oxt || return 1
 	 install -D -m644 presenter/presenter-screen.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presenter-screen.oxt || return 1
 	 install -D -m644 pdfimport/pdfimport.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/pdfimport.oxt || return 1
        popd
