@@ -1,3 +1,9 @@
+2010-04-12 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.3_dev300_m76-1:
+	- new snapshot
+	- use xz compression for source
+	
 2010-03-21 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.3_dev300_m75-2:
